2014-04-29  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_downstream_negotiation),
	(gst_ttmlbase_init):
	* src/gstttmlbase.h:
	* src/gstttmlrender.c: (gst_ttmlrender_setcaps),
	(gst_ttmlrender_class_init), (gst_ttmlrender_init):
	Better setcaps detection that allows working with gst 0.10 and 1.0

2014-04-29  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_fixate_caps):
	Remove unnecessary caps truncation (our template has only one struct)
	This removes an ultra-pedantic gcc warning about unused result...

2014-04-29  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_downstream_negotiation),
	(gst_ttmlbase_handle_buffer), (gst_ttmlbase_handle_event):
	* src/gstttmlbase.h:
	* src/gstttmlrender.c: (gst_ttmlrender_fixate_caps),
	(gst_ttmlrender_setcaps), (gst_ttmlrender_class_init),
	(gst_ttmlrender_init):
	* src/gstttmlrender.h:
	Add caps negotiation, for those derived classes like ttmlrender
	which might need to agree on a frame size, for example.

2014-04-29  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_class_init):
	Small enhancement to property description.

2014-04-28  Xavi Artigas  <xartigas@fluendo.com>

	* configure.ac:
	* src/Makefile.am:
	Prepare for Pango support.

2014-04-25  Xavi Artigas  <xartigas@fluendo.com>

	* src/Makefile.am:
	* src/fluttml.c: (plugin_init):
	* src/gstttmlrender.c: (gst_ttmlrender_gen_buffer),
	(gst_ttmlrender_class_init), (gst_ttmlrender_init):
	* src/gstttmlrender.h:
	Skeleton for ttmlrender element.

2014-04-25  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_handle_event),
	(gst_ttmlbase_get_type):
	Fix build for 1.0

2014-04-25  Xavi Artigas  <xartigas@fluendo.com>

	* src/Makefile.am:
	Updated Makefile for new file.

2014-04-25  Xavi Artigas  <xartigas@fluendo.com>

	* src/fluttml.c: (plugin_init):
	* src/gstttmlattribute.c:
	* src/gstttmlbase.c: (gst_event_new_new_segment),